--- a/DTC.web/src/pages/Dashboard/Dashboard.css
+++ b/DTC.web/src/pages/Dashboard/Dashboard.css
@@ -96,6 +96,7 @@
   .landing {
     justify-content: start;
     flex-direction: column;
+    width: 99%;
   }
   .landing-text {
     padding-top: 60px;
