--- a/DTC.web/src/pages/CardSearch/CardSearch.css
+++ b/DTC.web/src/pages/CardSearch/CardSearch.css
@@ -39,4 +39,5 @@
 /* Add this for the hover effect */
 .card-image:hover {
   outline: 3px solid rgb(205, 41, 27); /* Example outline color and width */
+  outline-offset: -1px;
 }
