--- a/DTC.web/src/assets/CardModal/CardModal.css
+++ b/DTC.web/src/assets/CardModal/CardModal.css
@@ -125,6 +125,9 @@
     font-size: 10px;
     padding: 8px;
   }
+  .modal-heading-mana {
+    margin-left: 5px;
+  }
   .modal-card {
     width: 145px;
     height: 202px;
@@ -135,6 +138,7 @@
   .modal-stats {
     margin-top: 53px;
     margin-left: 12px;
+    gap: 12px;
   }
   .modal-stats text {
     font-size: 11px;
