--- a/DTC.web/src/pages/Deck/Deck.css
+++ b/DTC.web/src/pages/Deck/Deck.css
@@ -161,7 +161,7 @@
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  outline: 2px solid #000;
+  outline: 2px solid #1a1a1a;
   outline-offset: -1px;
 }
 
@@ -206,10 +206,6 @@
 
 .button-effect-hover:hover {
   background-color: rgba(230, 171, 171, 0.6) !important;
-}
-
-.deck-view-board {
-  margin-top: 30px;
 }
 
 @media (max-width: 650px) {
@@ -269,10 +265,16 @@
 
   .deck-view-text-reg {
     margin-left: 0;
+    margin-bottom: 5px;
+    margin-top: 5px;
   }
 
   .deck-view-editors text {
     font-size: 14px;
+  }
+
+  .deck-view-stats {
+    margin-bottom: 20px;
   }
 
   .edit-button {
@@ -291,5 +293,17 @@
     font-size: 25px;
     margin-top: 2px;
     margin-left: 15px;
+  }
+
+  .deck-view-tabs {
+    margin-bottom: 25px;
+  }
+
+  .deck-view-add-card {
+    margin-bottom: 25px;
+  }
+
+  .deck-view-board {
+    margin-top: 5px;
   }
 }
