--- a/DTC.web/src/pages/Dashboard/Dashboard.css
+++ b/DTC.web/src/pages/Dashboard/Dashboard.css
@@ -44,6 +44,7 @@
   margin-bottom: 240px;
   gap: 30px;
   align-items: center;
+  transition: 0.5s;
 }
 
 .landing-heading {
@@ -89,6 +90,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  transition: 0.5s;
 }
 
 @media only screen and (max-width: 1250px),
