--- a/DTC.web/src/pages/Profile/Profile.css
+++ b/DTC.web/src/pages/Profile/Profile.css
@@ -1,56 +1,90 @@
 #header-pf {
-    font-family: "Arial";
-    width: 100%;
-    height: 100px;
-    display: flex;
-    position: fixed;
-    flex-direction: row;
-    align-items: center;
-    background-color: rgb(67, 5, 5);
-    padding: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    transition: 0.5s;
+  font-family: "Arial";
+  width: 100%;
+  height: 100px;
+  display: flex;
+  position: fixed;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(67, 5, 5);
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
 }
 
-.oauth {
-    margin-top: 130px;
-    margin-left: 10px;
-    position: fixed;
+.auth {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
+}
+
+.auth-bkg {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: rgb(48, 6, 6);
+  padding: 25px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+.auth-input {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.auth-input input {
+  width: 350px;
+  text-indent: 12px;
+  padding-right: 12px;
+}
+
+.auth-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.auth-buttons button {
+  background-color: rgb(121, 27, 27);
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 177px;
+  border-radius: 10px;
+}
+
+.auth-buttons :hover {
+  background-color: rgb(148, 45, 45);
+}
+
+.auth-buttons :active {
+  background-color: rgb(163, 54, 54);
+}
+
+.auth-button button {
+  background-color: rgb(121, 27, 27);
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 364px;
+  border-radius: 10px;
+}
+
+.auth-button :hover {
+  background-color: rgb(148, 45, 45);
+}
+
+.auth-button :active {
+  background-color: rgb(163, 54, 54);
 }
 
 @media (max-width: 650px) {
-    #header-pf {
-        height: 50px;
-    }
-    .oauth {
-        margin-top: 80px;
-    }
-}
+  #header-pf {
+    height: 50px;
+  }
 
-.oauth button {
-    width: 125px;
-    height: 40px;
-    background-color: rgb(78, 0, 0);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-}
-
-.oauth button:hover {
-    background-color: rgb(139, 48, 48);
-}
-
-.oauth button:active {
-    background-color: rgb(185, 77, 77);
-}
-
-#user-info {
-    margin-top: 10px;
-    padding: 15px;
-    gap: 10px;
-    font-family: "Arial";
-    display: flex;
-    flex-direction: column;
-    border-radius: 25px;
-    background-color: rgb(126, 28, 28);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    color: rgb(245, 245, 245);
+  .auth-input input {
+    font-size: inherit;
+  }
 }
