--- a/DTC.web/src/pages/Profile/Profile.css
+++ b/DTC.web/src/pages/Profile/Profile.css
@@ -13,10 +13,11 @@
 }
 
 .auth {
+  z-index: -1;
   display: flex;
-  height: 100vh;
+  position: fixed;
+  top: 150px;
   width: 100vw;
-  align-items: center;
   justify-content: center;
 }
 
@@ -37,9 +38,15 @@
 }
 
 .auth-input input {
+  transition: 0s;
   width: 350px;
   text-indent: 12px;
   padding-right: 12px;
+  display: none;
+}
+
+#username {
+  display: block;
 }
 
 .auth-buttons {
@@ -53,6 +60,7 @@
   margin-right: 0px;
   width: 177px;
   border-radius: 10px;
+  display: none;
 }
 
 .auth-buttons :hover {
@@ -69,6 +77,7 @@
   margin-right: 0px;
   width: 364px;
   border-radius: 10px;
+  display: none;
 }
 
 .auth-button :hover {
@@ -82,6 +91,10 @@
 @media (max-width: 650px) {
   #header-pf {
     height: 50px;
+  }
+
+  .auth {
+    top: 100px;
   }
 
   .auth-input input {
