--- a/DTC.web/src/assets/CardPane/CardPane.css
+++ b/DTC.web/src/assets/CardPane/CardPane.css
@@ -4,6 +4,7 @@
   margin-left: auto; /* Center the grid horizontally */
   margin-right: auto;
   padding: 10px;
+  padding-right: 5px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
