--- a/DTC.web/src/assets/CardModal/CardModal.css
+++ b/DTC.web/src/assets/CardModal/CardModal.css
@@ -30,8 +30,8 @@
   height: 100px;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   background-color: rgb(67, 5, 5);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
   width: 792px;
@@ -47,7 +47,6 @@
   background-color: rgb(121, 27, 27);
   border-radius: 25px;
   text-wrap: nowrap;
-  position: static;
   margin-left: 15px;
 }
 
@@ -56,9 +55,20 @@
   color: rgb(167, 134, 134);
 }
 
-.modal-button {
-  font-family: "Arial";
+.modal-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
   margin-right: 20px;
+}
+
+.modal-button {
+  margin-right: 0px;
+}
+
+.modal-button-flip {
+  padding-top: 2px;
+  margin-right: 0px;
 }
 
 .modal-info {
@@ -143,11 +153,15 @@
     font-size: 11px;
   }
 
-  .modal-button {
-    font-size: 12px;
+  .modal-buttons {
     margin-right: 12px;
-    height: 30px;
-    width: 32px;
+    gap: 0px;
+  }
+
+  .modal-button, .modal-button-flip {
+    font-size: 12px;
+    height: 22px;
+    width: 24px;
   }
 
   .modal-add-card {
