--- a/DTC.web/src/pages/Profile/Profile.css
+++ b/DTC.web/src/pages/Profile/Profile.css
@@ -149,7 +149,11 @@
   }
 
   .your-decks-text {
-    margin-top: 160px;
+    margin-top: 150px;
+  }
+
+  .auth-input {
+    font-size: 18px;
   }
 
   #deck-pane-pf {
